--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <script>
     // Link CSV dari Google Spreadsheet
-    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRjI7HFt1SP1zvH4op-fGN4U0oME2vlKmGro9prx7wrmXXAXI5jd5lafsFJnWnZ14S6iN0IUZ1gLKBR/pubhtml';
+    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRjI7HFt1SP1zvH4op-fGN4U0oME2vlKmGro9prx7wrmXXAXI5jd5lafsFJnWnZ14S6iN0IUZ1gLKBR/pub?output=csv';
 
     async function absenMasuk() {
       const input = document.getElementById("inputNIS").value.trim();
