--- a/index.html
+++ b/index.html
@@ -25,49 +25,42 @@
   <button onclick="absenMasuk()">Masuk</button>
   <div class="log" id="log"></div>
 
-  <script>
-    // Link CSV dari Google Spreadsheet
-    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRjI7HFt1SP1zvH4op-fGN4U0oME2vlKmGro9prx7wrmXXAXI5jd5lafsFJnWnZ14S6iN0IUZ1gLKBR/pub?output=csv';
+<script>
+  const webAppURL = 'https://script.google.com/macros/s/AKfycbxxxxxxx/exec'; // Ganti dengan URL web app kamu
 
-    async function absenMasuk() {
-      const input = document.getElementById("inputNIS").value.trim();
-      const log = document.getElementById("log");
+  async function absenMasuk() {
+    const input = document.getElementById("inputNIS").value.trim();
+    const log = document.getElementById("log");
 
-      if (!input) {
-        log.innerText = "⚠️ Masukkan NIS terlebih dahulu!";
-        return;
-      }
-
-      log.innerText = "🔄 Memeriksa daftar absen...";
-
-      try {
-        const res = await fetch(sheetURL);
-        const csvText = await res.text();
-        const rows = csvText.split("\n").map(row => row.split(","));
-
-        // Lewati header
-        let ditemukan = false;
-        for (let i = 1; i < rows.length; i++) {
-          const nis = rows[i][1]?.trim(); // Kolom B = NIS
-          const nama = rows[i][2]?.trim(); // Kolom C = Nama
-
-          if (input === nis) {
-            const now = new Date();
-            const waktu = now.toLocaleString("id-ID");
-            log.innerText = `✅ ${nis} - ${nama} tercatat hadir pada ${waktu}`;
-            ditemukan = true;
-            break;
-          }
-        }
-
-        if (!ditemukan) {
-          log.innerText = "❌ NIS tidak ditemukan dalam daftar!";
-        }
-      } catch (err) {
-        log.innerText = "⚠️ Gagal mengambil data dari spreadsheet.";
-        console.error(err);
-      }
+    if (!input) {
+      log.innerText = "⚠️ Masukkan NIS terlebih dahulu!";
+      return;
     }
-  </script>
+
+    log.innerText = "🔄 Mengirim data absensi...";
+
+    try {
+      const formData = new FormData();
+      formData.append("nis", input);
+      formData.append("mode", "masuk");
+
+      const res = await fetch(webAppURL, {
+        method: "POST",
+        body: formData,
+      });
+
+      const text = await res.text();
+      if (text === "OK") {
+        const now = new Date().toLocaleString("id-ID");
+        log.innerText = `✅ Absensi masuk berhasil dicatat pada ${now}`;
+      } else {
+        log.innerText = "❌ Gagal mencatat absen!";
+      }
+    } catch (err) {
+      log.innerText = "⚠️ Error saat mengirim data!";
+      console.error(err);
+    }
+  }
+ </script>
 </body>
 </html>
