--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <h1>Absensi Kehadiran</h1>
+  <h1>Absensi Kehadiran Test</h1>
   <input type="text" id="inputNIS" placeholder="Masukkan NIS"><br>
   <button onclick="absenMasuk()">Masuk</button>
   <div class="log" id="log"></div>
