--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="log" id="log"></div>
 
 <script>
-  const webAppURL = 'https://script.google.com/macros/s/AKfycbxJYk7kkAvzeQLBib_tFE6sqfDyeI0RVebNMRAFPR0-c491rh1KMUIMI0DqSWHnykWSAw/exec'; // Ganti dengan URL web app kamu
+  const webAppURL = 'https://script.google.com/macros/s/AKfycbxJYk7kkAvzeQLBib_tFE6sqfDyeI0RVebNMRAFPR0-c491rh1KMUIMI0DqSWHnykWSAw/exec';
 
   async function absenMasuk() {
     const input = document.getElementById("inputNIS").value.trim();
